--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
     <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
     <!-- Monaco Editor CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.34.0/min/vs/loader.min.js"></script>
+    <!-- Pyodide CDN with Alternate Source -->
+    <script src="https://pyodide-cdn2.iodide.io/v0.23.4/full/pyodide.js" id="pyodide-script"></script>
+    <script>
+        const pyodideScript = document.getElementById('pyodide-script');
+        pyodideScript.onerror = () => {
+            console.warn('Failed to load Pyodide from primary source, trying GitHub release');
+            pyodideScript.src = 'https://github.com/pyodide/pyodide/releases/download/0.23.4/full/pyodide.js';
+        };
+    </script>
     <style>
         @keyframes spin {
             0% { transform: rotate(0deg); }
@@ -44,22 +53,22 @@
     <script type="text/babel">
         // Sample Code Snippets
         const codeSnippets = {
-            'PID Controller': `class PIDController {
-                constructor(kp=1.0, ki=0.05, kd=0.2) {
-                    this.kp = kp;
-                    this.ki = ki;
-                    this.kd = kd;
-                    this.integral = 0;
-                    this.prev_error = 0;
-                }
-                update(target, current, dt) {
-                    const error = target - current;
-                    this.integral += error * dt;
-                    const derivative = (error - this.prev_error) / dt;
-                    this.prev_error = error;
-                    return this.kp * error + this.ki * this.integral + this.kd * derivative;
-                }
-            }`,
+            'PID Controller': `class PIDController:
+                def __init__(self, kp=1.0, ki=0.05, kd=0.2):
+                    self.kp = kp
+                    self.ki = ki
+                    self.kd = kd
+                    self.integral = 0
+                    self.prev_error = 0
+                def update(self, target, current, dt):
+                    error = target - current
+                    self.integral += error * dt
+                    derivative = (error - self.prev_error) / dt
+                    self.prev_error = error
+                    return self.kp * error + self.ki * self.integral + self.kd * derivative
+pid = PIDController()
+result = pid.update(10, 5, 0.1)
+print(f"PID Output: {result}")`,
             'A* Algorithm': `def a_star(start, goal, graph):
     open_set = {start}
     g_score = {start: 0}
@@ -68,7 +77,8 @@
         current = min(open_set, key=lambda x: f_score[x])
         if current == goal:
             return reconstruct_path(came_from, current)
-    return None`,
+    return None
+print("A* Algorithm defined (requires graph and heuristic)")`,
         };
 
         // Controller Section
@@ -116,7 +126,7 @@
         // Animation Window
         function AnimationWindow({ status }) {
             let animation = null;
-            if (status === 'Uploading...') {
+            if (status === 'Uploading...' || status === 'Compiling...' || status === 'Loading Pyodide...') {
                 animation = (
                     <div className="flex justify-center items-center h-full">
                         <div className="w-12 h-12 border-4 border-[#00FFFF] border-t-transparent rounded-full animate-[spin_1s_linear_infinite]"></div>
@@ -157,58 +167,48 @@
                 if (!canvas) return;
 
                 const ctx = canvas.getContext('2d');
-                const centerX = canvas.width / 2; // 200
-                const centerY = canvas.height / 2; // 200
-                const radius = canvas.width / 2; // Diameter is 400px, radius is 200px
+                const centerX = canvas.width / 2;
+                const centerY = canvas.height / 2;
+                const radius = canvas.width / 2;
                 let animationFrameId;
 
                 const drawHorizon = (roll = 0, pitch = 0) => {
-                    // Clear canvas
                     ctx.clearRect(0, 0, canvas.width, canvas.height);
 
-                    // Draw fixed outer circle
                     ctx.strokeStyle = '#ffffff';
                     ctx.lineWidth = 2;
                     ctx.beginPath();
                     ctx.arc(centerX, centerY, radius * 0.8, 0, Math.PI * 2);
                     ctx.stroke();
 
-                    // Translate to center for inner rotation
                     ctx.save();
                     ctx.translate(centerX, centerY);
-
-                    // Rotate based on roll
                     ctx.rotate(roll * Math.PI / 180);
 
-                    // Inner horizon with pitch offset
-                    const horizonRadius = radius * 0.7; // Reduced to ensure everything stays inside
-                    const pitchOffset = (pitch / 90) * (horizonRadius * 0.5); // Scale pitch to fit circle
+                    const horizonRadius = radius * 0.7;
+                    const pitchOffset = (pitch / 90) * (horizonRadius * 0.5);
 
-                    // Sky (Blue) - Upper half of circle
                     ctx.fillStyle = 'rgb(0, 191, 255)';
                     ctx.beginPath();
                     ctx.arc(0, -pitchOffset, horizonRadius, 0, Math.PI, true);
                     ctx.fill();
 
-                    // Ground (Brown) - Lower half of circle
                     ctx.fillStyle = 'rgb(139, 69, 19)';
                     ctx.beginPath();
                     ctx.arc(0, -pitchOffset, horizonRadius, 0, Math.PI, false);
                     ctx.fill();
 
-                    // Horizon Line (white arc) inside
                     ctx.strokeStyle = '#ffffff';
                     ctx.lineWidth = 1;
                     ctx.beginPath();
                     ctx.arc(0, -pitchOffset, horizonRadius, 0, Math.PI * 2);
                     ctx.stroke();
 
-                    // Pitch Lines (inside the circle) with 90° left rotation
                     ctx.lineWidth = 1;
                     for (let i = -90; i <= 90; i += 10) {
-                        const baseAngle = (i / 90) * Math.PI / 2; // Original angle in radians
-                        const rotatedAngle = baseAngle - Math.PI / 2; // Rotate 90° left (counterclockwise)
-                        const lineRadius = horizonRadius * 0.6; // Further reduced to stay inside
+                        const baseAngle = (i / 90) * Math.PI / 2;
+                        const rotatedAngle = baseAngle - Math.PI / 2;
+                        const lineRadius = horizonRadius * 0.6;
                         const y = -pitchOffset + Math.sin(rotatedAngle) * lineRadius;
                         const x = Math.cos(rotatedAngle) * lineRadius;
                         if (i !== 0) {
@@ -217,43 +217,37 @@
                             ctx.lineTo(5, y);
                             ctx.stroke();
                             ctx.fillStyle = '#ffffff';
-                            ctx.font = '10px monospace'; // Smaller font to fit
+                            ctx.font = '10px monospace';
                             ctx.save();
                             ctx.translate(x, y);
-                            ctx.rotate(-roll * Math.PI / 180 - Math.PI / 2); // Counter-rotate for text with 90° offset
-                            ctx.fillText(`${i}°`, 10, 2); // Adjusted position
+                            ctx.rotate(-roll * Math.PI / 180 - Math.PI / 2);
+                            ctx.fillText(`${i}°`, 10, 2);
                             ctx.restore();
                         }
                     }
 
                     ctx.restore();
 
-                    // Display Target above horizon
                     ctx.fillStyle = 'rgb(0, 255, 255)';
                     ctx.font = '16px monospace';
                     ctx.textAlign = 'center';
                     ctx.fillText(`TARGET: ${selectedValue || 'NONE'}`, centerX, centerY - radius * 0.8 - 20);
-
-                    // Display Roll and Pitch below horizon
                     ctx.fillText(`Roll: ${roll.toFixed(1)}°`, centerX, centerY + radius * 0.8 + 20);
                     ctx.fillText(`Pitch: ${pitch.toFixed(1)}°`, centerX, centerY + radius * 0.8 + 40);
                 };
 
-                // Draw initial neutral horizon
                 drawHorizon(0, 0);
 
-                // Start animation if simulating
                 if (isSimulating) {
                     const animate = () => {
-                        let roll = 0;
-                        let pitch = 0;
-                        const time = Date.now() * 0.001; // Use time for smooth animation
+                        let roll = 0, pitch = 0;
+                        const time = Date.now() * 0.001;
                         if (selectedType === 'controller' && selectedValue === 'PID Controller') {
-                            roll = Math.sin(time * 2) * 30; // -30° to 30°
-                            pitch = Math.cos(time * 2) * 20; // -20° to 20°
+                            roll = Math.sin(time * 2) * 30;
+                            pitch = Math.cos(time * 2) * 20;
                         } else if (selectedType === 'algorithm' && selectedValue === 'A* Algorithm') {
-                            roll = Math.sin(time * 1.5) * 45; // -45° to 45°
-                            pitch = Math.sin(time * 1) * 60; // -60° to 60°
+                            roll = Math.sin(time * 1.5) * 45;
+                            pitch = Math.sin(time * 1) * 60;
                         }
                         drawHorizon(roll, pitch);
                         animationFrameId = requestAnimationFrame(animate);
@@ -277,19 +271,64 @@
         // Main App
         function App() {
             const [editorContent, setEditorContent] = React.useState(codeSnippets['PID Controller']);
-            const [status, setStatus] = React.useState('Ready');
+            const [status, setStatus] = React.useState('Loading Pyodide...');
             const [selectedType, setSelectedType] = React.useState('controller');
             const [selectedValue, setSelectedValue] = React.useState('PID Controller');
-            const editorRef = React.useRef(null);
+            const [compileOutput, setCompileOutput] = React.useState('');
             const [isSimulating, setIsSimulating] = React.useState(false);
+            const editorRef = React.useRef(null);
+            const [pyodide, setPyodide] = React.useState(null);
+            const [retryCount, setRetryCount] = React.useState(0);
+            const maxRetries = 3;
 
             React.useEffect(() => {
-                require.config({ paths: { 'vs': 'https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.34.0/min/vs' } });
-                require(['vs/editor/editor.main'], function() {
-                    if (!window.monaco) {
-                        console.error('Monaco Editor failed to load');
+                async function loadPyodide(sourceIndex = 0, attempt = 1) {
+                    const sources = [
+                        'https://pyodide-cdn2.iodide.io/v0.23.4/full/',
+                        'https://github.com/pyodide/pyodide/releases/download/0.23.4/full/'
+                    ];
+                    if (attempt > maxRetries) {
+                        setStatus(`Error: Failed to load Pyodide after ${maxRetries} attempts. Check console or try local hosting/backend.`);
                         return;
                     }
+
+                    try {
+                        const indexURL = sources[sourceIndex];
+                        console.log(`Attempting to load Pyodide from ${indexURL} (Attempt ${attempt}/${maxRetries})`);
+                        const pyodideInstance = await window.loadPyodide({
+                            indexURL: indexURL,
+                            timeout: 30000
+                        });
+                        await pyodideInstance.loadPackage(['numpy']);
+                        setPyodide(pyodideInstance);
+                        setStatus('Ready');
+                        console.log(`Pyodide loaded successfully from ${indexURL}`);
+                    } catch (err) {
+                        const errorDetails = {
+                            message: err.message,
+                            name: err.name,
+                            stack: err.stack,
+                            code: err.code
+                        };
+                        console.error(`Pyodide load attempt ${attempt} with ${sources[sourceIndex]} failed:`, errorDetails);
+                        setStatus(`Loading Pyodide... (Attempt ${attempt}/${maxRetries} from ${sources[sourceIndex]})`);
+                        await new Promise(resolve => setTimeout(resolve, 7000));
+                        if (sourceIndex + 1 < sources.length) {
+                            await loadPyodide(sourceIndex + 1, attempt);
+                        } else {
+                            await loadPyodide(0, attempt + 1);
+                        }
+                    }
+                }
+                loadPyodide();
+
+                require.config({ paths: { 'vs': 'https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.34.0/min/vs' } });
+                require(['vs/editor/editor.main'], function() {
+                    if (!window.monaco || !document.getElementById('editor')) {
+                        console.error('Monaco Editor or editor div failed to load');
+                        return;
+                    }
+                    if (editorRef.current) editorRef.current.dispose();
                     editorRef.current = monaco.editor.create(document.getElementById('editor'), {
                         value: editorContent,
                         language: 'python',
@@ -323,11 +362,29 @@
                 setStatus('Uploading...');
                 try {
                     const response = await axios.post('http://192.168.4.1:8080/upload', editorContent, {
-                        timeout: 5000, // 5-second timeout
+                        timeout: 5000,
                     });
                     setStatus('Code uploaded');
                 } catch (error) {
                     setStatus(`Error: ${error.message || 'Network issue or server unavailable'}`);
+                } finally {
+                    setTimeout(() => setStatus('Ready'), 2000);
+                }
+            };
+
+            const compileCode = async () => {
+                if (!pyodide) {
+                    setCompileOutput('Error: Pyodide not loaded yet. Please wait or check console.');
+                    return;
+                }
+
+                setStatus('Compiling...');
+                setCompileOutput('');
+                try {
+                    const output = await pyodide.runPythonAsync(editorContent);
+                    setCompileOutput(output || 'Compiled successfully (no output)');
+                } catch (error) {
+                    setCompileOutput(`Error: ${error.message}`);
                 } finally {
                     setTimeout(() => setStatus('Ready'), 2000);
                 }
@@ -344,7 +401,15 @@
                     </h1>
                     <div className="flex flex-col md:flex-row gap-6">
                         <div className="md:w-2/3">
-                            <div id="editor" className="h-[900px] futuristic-border rounded-lg scan-effect"></div>
+                            <div id="editor" className="h-[800px] futuristic-border rounded-lg scan-effect"></div>
+                            <div className="mt-4 p-4 bg-gray-700 rounded-lg">
+                                <button onClick={compileCode}
+                                    className="bg-[#00FF00] hover:bg-[#00CC00] text-black font-bold py-2 px-4 rounded-lg futuristic-border animate-[pulse_2s_infinite]"
+                                    disabled={!pyodide}>
+                                    COMPILE
+                                </button>
+                                <pre className="mt-2 text-[#00FFFF] whitespace-pre-wrap">{compileOutput}</pre>
+                            </div>
                         </div>
                         <div className="md:w-1/3 space-y-6">
                             <ControllerSection onSelect={handleSelect} />
