--- a/index.html
+++ b/index.html
@@ -657,8 +657,8 @@ while True:
                             <button onClick={() => handleControl('Right')} className="gamepad-button right">Right (Roll +)</button>
                         </div>
                         <div className="gamepad-row">
-                            <button onClick={() => handleControl('Forward')} className="gamepad-button">Forward (Pitch +)</button>
-                            <button onClick={() => handleControl('Backward')} className="gamepad-button">Backward (Pitch -)</button>
+                            <button onClick={() => handleControl('Forward')} className="gamepad-button">Forward (Pitch -)</button>
+                            <button onClick={() => handleControl('Backward')} className="gamepad-button">Backward (Pitch +)</button>
                         </div>
                     </div>
                 </div>
